# repositoriodeteste

./: README.md  package-lock.json
LetterPlay/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
LetterPlay/src/: App.jsx  index.css
LetterPlay/src/Scripts/api/: api.js  reviewApi.js  searchApi.js  userApi.js  watchListApi.js  watchListGameApi.js
LetterPlay/src/Scripts/services/: FilterByGenre.jsx  GameList.jsx  GameRanking.jsx  ShowLists.jsx  api.js  authService.js  userService.js
LetterPlay/src/Scripts/ui/: BttOptPerfil.jsx  CardUI.jsx  HeaderUI.jsx  Popup.jsx  TypographyUI.jsx  index.js
LetterPlay/src/pages/: AboutGame.jsx  AboutList.jsx  Home.jsx  LibraryGames.jsx  Lists.jsx  Login.jsx  Perfil.jsx  Register.jsx
LetterPlay/src/util/: gameMapper.js
backend/: .env  LICENSE  README.md  main.py  pyproject.toml  watchlist.db
backend/ApresentacaoBd/: 1_create.sql  2_populate.sql  3_demo.sql  setup.py  setup2.py
backend/app/: dependencies.py  init_db.py  main.py
backend/app/core/: settings.py
backend/app/database/: connection.py  database_schema.sql
backend/app/models/: user.py
backend/app/repositories/: review.py  user.py  watchlist.py
backend/app/routers/: auth.py  users.py  watchlist.py
backend/app/schemas/: auth.py  common.py  review.py  token.py  user.py  watchlist.py
backend/app/security/: security.py
backend/app/services/: auth.py  igdb_client.py  review.py  user.py  watchlist.py
